--- a/templates/home.html
+++ b/templates/home.html
@@ -1,1 +1,10 @@
-<h1>Bruh</h1>
+<header>
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
+    <ul class="t">
+        <li>repeat.</li>
+        <li>Develop.</li>
+        <li>design.</li>
+        <li>Sketch.</li>
+        <li>Imagine.</li>
+    </ul>
+</header>
