--- a/templates/home.html
+++ b/templates/home.html
@@ -2,5 +2,19 @@
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
 </header>
 <body>
-    <div class="nav"></div>
+    <header>
+        <nav class='nav1'>
+          <ul class='nav_links'>
+            <a>
+              <li href="#home">Home</li>
+            </a>
+            <a>
+              <li href="#profile">Profile</li>
+            </a>
+            <a>
+              <li href="#newpost">New Post</li>
+            </a>
+          </ul>
+        </nav>
+      </header>
 </body>
