--- a/static/style.css
+++ b/static/style.css
@@ -1,16 +1,33 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  color: #3A4A4D;
+}
+
 body {
-    margin: 0 auto;
-    text-align: center;
-    font-family: sans-serif;
-    color: #ffffff;
-    background: #424242;
+  background-color: black;
 }
-h1{
-  color:#3A4A4D;
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 10%;
+  background-color: #171717;
 }
-.nav{
-  width:100%;
-  height:7%;
-  background-color:#171717;
-  color:#3A4A4D;
+.nav_links a {
+  display: inline-block;
+  width: 20%;
+  padding-left: 3%;
+  padding-right: 10%;
+  cursor: pointer;
+  border-left: 1px solid white;
+  margin-right: 30px;
+  text-transform: uppercase;
+  list-style-type: none;
+}
+
+li {
+  min-width: 80px;
 }
